Wildlife Spotter #3  - Add bold to help text  - Remove dots from film strip  - Don't fix background image for WS so that whole image is visible  - Add default WS background

--- a/grails-app/assets/scss/modules/_components.scss
+++ b/grails-app/assets/scss/modules/_components.scss
@@ -17,7 +17,6 @@
 		color: white;
 		background-position: center;
 		background-repeat: no-repeat;
-		background-attachment: fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
